# CorNet-GUI

./: .$cornet_gui.drawio.bkp  .$cornet_model.drawio.bkp  .gitignore  CorNet.lnk  MANIFEST.in  README.md  appmap.yml  cornet_gui.drawio  cornet_model.drawio  requirements.txt  setup.cfg  setup.py
config/: config.json
db/compilers/: test
db/model_lists/: autoencoder_2n  autoencoder_8_02  conv_n_prog_32_04  tesmodel  test  test_2
db/models/: autoencoder_16_00.cpl  autoencoder_16_00.h5  autoencoder_2n.h5  autoencoder_trained.h5  conv_n_prog_32_04.cpl  tesmodel.cpl  tesmodel.h5  test.cpl  test.h5  test_2.cpl  test_2.h5
doc/: .$cornet_model.drawio.dtmp  cornet_model.drawio
multimedia/render/: compiled-model.gv
src/: __init__.py  __path_to_config__.py  __testfile__.py  __version__.py  _angui.py  _compiler.py  _database_structure.py  _dbgui.py  _gui.py  _gui_viz.py  _ht_generator.py  _main_gui.py  _model.py
src/compiler_structures/: __init__.py  _compiler.py  _model.py  _typeoflayers.py
src/cornet_api/: __init__.py  __special__.py  _angui.py  _dbgui.py  _gui.py  _gui_viz.py  _main_gui.py
src/cornet_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/database_structures/: __init__.py  _database_structure.py  _generator.py  _ht_generator.py  _wk_generator.py
src/model_structures/: __init__.py
src/utils/: __init__.py  (+3 more)
temp/: logfile.txt  logfiledb.txt  tempmodel.cpl  tempmodel.h5
test/: __database_rework__.py  __test_wk__.py  __testfit.py  _test_reshape.py  _testcompiler.py  _testdbgui.py  _testgui.py  temporalfile.txt  test_ns.py  test_windowdiff.py
(+156 files in other folders)
