[metadata]
name = cornet
version = 0.0.0
author = Alberto Palomo Alonso
author_email = alberto.palomo@uah.es
description = Package for solving correlation matrix clustering.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iTzAlver/cnet
project_urls =
    Bug Tracker = https://github.com/iTzAlver/cnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = cnet
packages = find:
python_requires = >=3.6

[options.packages.find]
where = cnet